--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&family=Inter:wght@400;600;700&display=swap");
+
+.title {
+    font-family: "Hedvig Letters Sans", sans-serif;
+    font-family: "Inter", sans-serif;
+    /* background-color: rgb(111, 167, 239); */
+    /* padding: 10px 20px; */
+    /* border: solid 1px rgb(111, 167, 239); */
+    /* color: rgb(101, 164, 246); */
+    color: rgb(31, 121, 239);
+}
+
 .App {
-  text-align: center;
+    text-align: center;
+    padding: 25px 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-col-header {
+    color: rgb(31, 121, 239);
 }
